# SynthWave

./: .gitignore  .pre-commit-config.yaml  README.md  g1120906030_1  install.sh  pyproject.toml  test_diagnostic.py  test_diagnostic_full.py  test_oft_env_singleton.py
.github/workflows/: ci.yml
examples/: freq_response.ipynb  mesh_plot.ipynb
synthwave/: __init__.py  main.py
synthwave/input_data/cmod/: C_Mod_ThinCurr_Combined-homology.h5  C_Mod_ThinCurr_VV-homology.h5
synthwave/magnetic_geometry/: equilibrium_field.py  filaments.py  plots.py  utils.py
synthwave/mirnov/: generate_synthetic_mirnov_signals.py  prep_thincurr_input.py  run_thincurr_model.py
synthwave/mirnov/input_data/: sensor_details_C_MOD_ALL.nc
synthwave/scratch/: bnorm.py  freq_response.py  mesh_plot.py
synthwave/tests/: conftest.py  test_equilibrium_field.py  test_filaments.py  test_thincurr.py  test_utils.py
synthwave/tests/input_data/: g1160930033.0800
