[project]
name = "synthwave"
version = "0.1.0"
description = "Generating synthetic magnetic measurements of MHD modes with ThinCurr"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Rian Chandra", email = "rianc@mit.edu"},
    {name = "Zander Keith", email = "zkeith@mit.edu"},
]
dependencies = [
    "pre-commit>=4.3.0",
    "freeqdsk>=0.5.2",
    "xarray>=2025.1.0",
    "scipy>=1.16.2",
    "pyvista>=0.46.3",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "sympy>=1.14.0",
    "openfusiontoolkit",
    "h5py>=3.14.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pylint>=4.0.1",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "shellcheck-py>=0.11.0.1",
    "tomllint>=0.3.0",
    "yamllint>=1.37.1",
]

[tool.isort]
profile = "black"

[tool.uv.sources]
openfusiontoolkit = { path = "submodules/openfusiontoolkit-1.0.0b7.dev0-py3-none-manylinux_2_28_x86_64.whl" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
