[project]
name = "synthwave"
version = "0.1.0"
description = "Generating synthetic magnetic measurements of MHD modes with ThinCurr"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Rian Chandra", email = "rianc@mit.edu"},
    {name = "Zander Keith", email = "zkeith@mit.edu"},
]
dependencies = [
    "pre-commit>=4.3.0",
    "openfusiontoolkit",
    "freeqdsk>=0.5.2",
    "xarray>=2025.1.0",
    "scipy>=1.16.2",
    "pyvista>=0.46.3",
    "matplotlib>=3.10.7",
    "h5py>=3.15.1",
    "netcdf4>=1.7.3",
    "sympy>=1.14.0",
    "loguru>=0.7.3",
    "h5netcdf>=1.8.1",
]

[dependency-groups]
dev = [
    "jupyter",
    "black>=25.9.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "nbmake>=1.5.0",
    "pylint>=4.0.1",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "shellcheck-py>=0.11.0.1",
    "tomllint>=0.3.0",
    "yamllint>=1.37.1",
]

[tool.uv.sources]
openfusiontoolkit = {path = "submodules/OpenFUSIONToolkit/python", editable = true}

[tool.pytest.ini_options]
# Prevent accidental parallel execution.  Tests in test_thincurr.py use the
# OpenFUSIONToolkit C++ library which has global state and cannot run
# concurrently.  -p no:xdist is a no-op when pytest-xdist is not installed,
# but makes intent explicit and guards against it being added later.
addopts = "-p no:xdist"
markers = [
    "serial: run sequentially with GC cleanup between tests (required for OFT tests)",
]

[tool.isort]
profile = "black"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
